   which threw off one of our tests.  We now allow for this different
   format. [Reported by Scott Godin]

 - Fixed an issue that prevented Module::Build from upgrading itself
   using its own API (which is how CPANPLUS uses it).  There are still
   some issues with this solution, however.  See ticket #13169 in
   rt.cpan.org. [Reported by Jos Boumans]

0.27_01 (Beta for 0.28)  Fri Apr 15 21:12:57 CDT 2005

 Backward-incompatible (but better) changes:

 * When using the 'install_base' option to choose a directory for
   installing everything, perl modules now go into lib/perl5/ instead
   of just lib/.  It seems this is more consistent with people's
   expectations, and the way I had it before was a bit peculiar to the
   way I like things in my own home directory. [Michael Schwern]

 * When the user is using the 'install_base' option, scripts will now
   be installed by default in $install_base/bin/ rather than
   $install_base/script/ . [Jan Hudec and Michael Schwern]

 Major changes:

 - The auto_features mechanism will now re-evaluate dependencies every
   time feature() is called for an auto-feature, rather than freezing
   the success/failure value during 'perl Build.PL' and using that
   value for all eternity (or module update, whichever comes first).
   This applies to both $build->feature() and
   FooModule::ConfigData->feature() calls. [Requested by many]

 - Added the meta_add and meta_merge mechanisms, which let the module
   author add/merge arbitrary entries into the META.yml file.

 - Now reads per-action default options from '$ENV{HOME}/.modulebuildrc'
   if it exists. Command line options override anything set in the rc file.

 - Extend prerequisite specifications to apply to all actions. It is
   now a fatal error if 'requires' or 'conflicts' for a given action
   are not satisfied, except where necessary for backwards compatability.
   Also, added '--force' options to ignore the fatal errors. (NOTE: