@@ -3,7 +3,7 @@
 use lib 't/lib';
 use strict;
 
-use Test::More tests => 4;
+use Test::More tests => 7;
 
 
 use File::Spec ();
@@ -54,3 +54,24 @@ ok $pp, 'object created';
 
 is $pp->get_author->[0], 'C<Foo::Bar> was written by Engelbert Humperdinck I<E<lt>eh@example.comE<gt>> in 2004.', 'author';
 is $pp->get_abstract, 'Perl extension for blah blah blah', 'abstract';
+
+
+{
+  # Try again without a valid author spec
+  untie *FH;
+  tie *FH, 'IO::StringBased', <<'EOF';
+=head1 NAME
+
+Foo::Bar - Perl extension for blah blah blah
+
+=cut
+EOF
+
+  my $pp = Module::Build::PodParser->new(fh => \*FH);
+  ok $pp, 'object created';
+  
+  is_deeply $pp->get_author, [], 'author';
+  is $pp->get_abstract, 'Perl extension for blah blah blah', 'abstract';
+}
+
+
